<resources>
    <string name="app_name">BUYER</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="verifytext">Please Enter The 4 Digit Code Sent To </string>
    <string name="Forgotpasswordtext">Please Enter Your Email Address
        To Recieve a Verification Code.  </string>
    <string name="createnewpasswordtext">Your New Password Must Be Different From Previously Used Password </string>
    <string name="rulesStart">The rules for publishing ads on Buyer are created to ensure the high quality of ads and the smooth operation of buyers/sellers. Using the features and services provided by the Buyer program implies acceptance of the "Publishing Ads" rules and willingness to follow them.
In case of violations, ads are removed, and the corresponding user accounts are blocked.</string>

    <string name="rulesO">1. Multiple publication of ads with the same meaning in one or more different sections is not allowed.</string>
    <string name="rulesTw">
2. Each ad must be placed in the corresponding section.</string>
    <string name="rulesTTO">
2.1 Ads must be placed in the section that corresponds to the content of the ad.</string>
    <string name="rulesT">
3. Before placing an ad, remember that</string>
    <string name="rulesTO">
3.1. The ad must provide as much detailed information as possible about the product you are looking for.</string>
    <string name="rulesTt">
3.2. All criteria of the ad (such as price, area, model, etc.) must correspond to reality. The title should also correspond to the submitted content.</string>
    <string name="rulesTT">
3.3. The title should not contain your contact information: phone number, address, email. email address, as well as the price.</string>
    <string name="rulesTf">
3.4. The description of the announcement should also not contain any contact information, since there are special fields for the latter.</string>
    <string name="rulesTF">
3.5. Each announcement should present only one item. If you are presenting more than one product, please place them in separate announcements.</string>
    <string name="rulesTs">
3.6. Each user can have only one registration (account) on the site. It is prohibited to place duplicate announcements with different email addresses by one user or organization.
    </string>
    <string name="rulesTS">
3.7. The announcement must be written in English.</string>
    <string name="rulesF">
4. Announcements are prohibited that contain:</string>
    <string name="rulesFO">
4.1. Offers of services and goods that are considered illegal by the current regulations.</string>
    <string name="rulesFt">
4.2. Disrespectful language, as well as offensive expressions, including racist or religious ones.</string>
    <string name="rulesFT">
4.3. Information about online accounts, passwords and third parties, as well as as well as offers for the sale of related services.</string>
    <string name="rulesFf">
4.4 Offers for the sale, purchase or exchange of medicines, drugs, tobacco products, vapers, liquids intended for the latter and tobacco mixtures.</string>
    <string name="rulesFF">
4.5 Offers on occult topics: fortune-telling, Satanism, rituals, magic, psychics, etc.</string>
    <string name="rulesFS">
4.6 National, racial, religious, sexual discrimination.</string>
    <string name="rulesEnd">
According to the terms of use, the Buyer program reserves the right to remove any announcement without explanation if it does not comply with the rules for posting announcements.
The Buyer administration and moderators have the right to make changes to the text of the announcement, move it to other sections, limit the number of announcements posted by one user, and also completely prohibit posting announcements.
Users who deliberately violate the rules will be blocked from posting for a long time.</string>
    <string name="title_activity_home_add">HomeAdd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="type_a_message">Type a message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>