<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buyer.BUYER.b.ViewHolder.RulesForPublishingAnnouncements">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rules for publishing announcements"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/red"
            android:layout_marginStart="10dp"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/rulesStart"/>

        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesO"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTw"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTTO"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesT"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTO"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTt"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTT"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTf"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTF"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTs"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTS"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesF"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFO"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFt"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFT"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFf"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFF"/>
        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesFS"/>
        <TextView
            android:padding="15dp"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesEnd"/>


        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
            <Button
                android:id="@+id/agree"
                android:layout_width="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="Agree"
                android:backgroundTint="@color/blue1"
                android:layout_height="wrap_content"/>

         <Button
             android:id="@+id/disagree"
             android:layout_width="match_parent"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:backgroundTint="@color/black"
             android:text="Disagree"
             android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>